# memos

./: .claudeignore  .gitignore  .memos-project  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh.md  copy_memos.bat  copy_memos.ps1  fix_tests.py  inspect_test.py  install.ps1  install.sh  pyproject.toml  recover_file.py  requirements.txt  upgrade-memos.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api-reference.md  cli-commands.md  mcp-tools.md  test-infrastructure.md  troubleshooting.md  v0.4.x-features.md
etc/: .injected_records_5c3da672.json  .injected_records_7f2351d9.json  .injected_records_d0ff92fa.json  .session_marker.json  config.example.json  config.schema.json  users.json
etc/locales/: en.json  zh.json
etc/prompts/: index.json
scripts/: backup_memdb.py  benchmark.py  check_task_data.py  cleanup_chromadb_projects.py  cleanup_orphan_records.py  cleanup_orphaned_segments.py  cleanup_test_projects.py  debug_mcp_proxy.py  dump_suggestion_jsons.py  e2e_test_proxy.py  fix_route_imports.py  integration_real.py  mcp_client.py  migrate_old_records_scope.py  migrate_todo_status.py  rebuild_chroma_index.py  rebuild_collection.py  reindex_embeddings.py  release_exclude.txt  reset_chromadb_total.py  seed_test_suggestions.py  smoke_test.py  split_dashboard.py  sync-to-github.ps1  sync_to_github.py  test_mcp_handshake.py  test_mcp_proxy_handshake.py
src/memos/: __init__.py  errors.py  i18n.py
src/memos/cli/: migrate.py  (+4 more)
tests/: conftest.py  test_active_memory_config.py  test_auth.py  test_backup.py  test_benchmark.py  test_bm25_incremental.py  test_buffer.py  test_cli.py  test_cli_mcp_install.py  test_cli_todo.py  test_config_paths.py  test_config_validate.py  test_conflict_api.py  test_conflict_detection.py  test_conversation_search.py  test_dashboard.py  test_dashboard_daily_review.py  test_dashboard_prompts_api.py  test_dashboard_wizard.py  test_endpoint_prompt_decoupling.py  test_endpoint_test.py  test_error_messages.py  test_expiry.py  test_export_import.py  test_extract_mock.py  test_extractor_retry.py  test_extractor_unified.py  test_f10_feedback.py  test_f7_forget_archive.py  test_hook_layered_context.py  test_hook_prompt_integration.py  test_hook_system_suggestions.py  test_hooks.py  test_hybrid_search.py  test_init_wizard.py  test_integration.py  test_integration_all.py  test_integration_v020.py  test_integration_v030.py  test_integration_v040.py  (+30 more)
tests/e2e/: test_hook_endpoints.py  test_v060_e2e.py
tests/engine/: test_recall_v060.py
tests/features/: test_briefing.py  test_performance.py
tests/performance/: test_perf_v072.py
tests/server/: test_hook_handler_v060.py  test_mcp_v060.py  test_task_injection.py  test_v071_briefing.py  test_v071_task_architecture.py
tests/smoke/: test_regression.py
tests/test_migration/: __init__.py  test_migrate.py
tests/test_unified/: __init__.py  test_app.py  test_e2e.py  test_mcp_project_id.py  test_project_id.py  test_proxy.py  test_session_auth.py  test_setup.py  test_sse.py  test_sse_wrapper.py
tests/v070_integration/: conftest.py
tools/: clean_orphan_project.py
(+141 files in other folders)
